make signal a discrete component
