# api/v1/api.gen.go
@@ -31,19 +31,7 @@ type Identifier struct {
 // Messages define the details of a CAN Bus frame an the format of its data
 type Message struct {
 	// Data format
-	Data []struct {
-		// Name of the signal
-		Name string `json:"name"`
-
-		// Number of padding bits between signals
-		Padding *uint8 `json:"padding,omitempty"`
-
-		// Reference to a J1939 SLOT
-		Slot *string `json:"slot,omitempty"`
-
-		// Number of bits the signal occupies
-		Type *string `json:"type,omitempty"`
-	} `json:"data"`
+	Data       []Signal    `json:"data"`
 	Identifier *Identifier `json:"identifier,omitempty"`
 	Length     uint8       `json:"length"`
 }
@@ -92,6 +80,21 @@ type SLOTResource struct {
 
 	// Slots are a J1939 construct that define how real values are encoded and decoded to and from fixed-point integers.
 	Spec *SLOT `json:"spec,omitempty"`
+}
+
+// Signal defines model for Signal.
+type Signal struct {
+	// Name of the signal
+	Name string `json:"name"`
+
+	// Number of padding bits between signals
+	Padding *uint8 `json:"padding,omitempty"`
+
+	// Reference to a J1939 SLOT
+	Slot *string `json:"slot,omitempty"`
+
+	// Number of bits the signal occupies
+	Type *string `json:"type,omitempty"`
 }
 
 // Getter for additional properties for Metadata_Labels. Returns the specified
